Fix align

--- a/ui/project-managment-admin/src/app/dashboard/dashboard.component.css
+++ b/ui/project-managment-admin/src/app/dashboard/dashboard.component.css
@@ -177,8 +177,9 @@ mat-grid-list {
 }
 
 .overview-card {
-  width: 450px;
+  width: 300px;
   height: 250px;
+  margin-bottom: 25px;
 }
 
 
@@ -239,4 +240,8 @@ mat-grid-list {
   font-weight: bold;
   text-align: center;
   color: #18ce0f;
+}
+
+h2 {
+  text-align: center;
 }
